--- a/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
@@ -134,7 +134,7 @@ watch kubectl get tigerastatus
 
 <TabItem label="Rancher UI" value="UI-1">
 
-Unlike the Rancher CLI, the Rancher UI does not provide an option to set the RKE2 CNI value as `none`, which is required by RKE2 to install a non-default CNI like {{prodname}}. To install {{prodname}} using Rancher UI, you must first provision an RKE2 cluster with Calico Open Source, then upgrade it to {{prodname}}.
+Unlike the Rancher CLI, the Rancher UI does not provide an option to set the RKE2 CNI value to `none`, which is required by RKE2 to install a non-default CNI like {{prodname}}. To install {{prodname}} using Rancher UI, you must first provision an RKE2 cluster with Calico Open Source, then upgrade it to {{prodname}}.
 
 ### Provision RKE2 cluster with Calico Open Source
 
