Address review comments

--- a/calico-enterprise/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-aws.mdx
@@ -229,6 +229,7 @@ an instance (for example when scaling up the cluster).
 - [Verify the feature operation](#verify-the-feature-operation)
 - [Controlling the use of egress gateways](#controlling-the-use-of-egress-gateways)
 - [Policy enforcement for flows via an egress gateway](#policy-enforcement-for-flows-via-an-egress-gateway)
+- [Upgrade egress gateways](#upgrade-egress-gateways)
 
 ### Configure IP autodetection
 
@@ -1078,7 +1079,7 @@ patch release.
 
 :::
 
-## Upgrading egress gateways
+## Upgrade egress gateways
 
 
 From v3.16, Egress Gateway deployments are managed by the Tigera Operator.
