--- a/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
@@ -181,6 +181,7 @@ patch release.
 - [Configure a Namespace or Pod to use egress gateways](#configure-a-namespace-or-pod-to-use-egress-gateways)
 - [Optionally enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
 - [Verify the feature operation](#verify-the-feature-operation)
+- [Upgrade egress gateways](#upgrade-egress-gateways)
 
 ### Enable egress gateway support
 
@@ -461,7 +462,7 @@ Connection from <source IP> <source port> received
 
 with `<source IP>` being one of the IPs of the egress IP pool that you provisioned.
 
-## Upgrading egress gateways
+## Upgrade egress gateways
 
 From v3.16, Egress Gateway deployments are managed by the Tigera Operator.
 
