--- a/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/rke2.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/rke2.mdx
@@ -2,14 +2,14 @@
 description: Install Calico Enterprise on an RKE2 cluster.
 ---
 
-# RKE2 - Rancher's Next Generation Kubernetes Distribution
+# Rancher Kubernetes Distribution Government (RKE2)
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 ## Big picture 
 
-Install {{prodname}} on Rancher's Next-generation Kubernetes Distribution (RKE2) clusters using the CLI or Rancher UI.
+Install {{prodname}} on RKE2 clusters using the CLI or Rancher UI.
 
 ## Before you begin
 
@@ -27,7 +27,8 @@ Install {{prodname}} on Rancher's Next-generation Kubernetes Distribution (RKE2)
 **Required**
 
 - A [compatible RKE2 cluster](../compatibility.mdx#rke2)
-   For help, see [Rancher Kubernetes Engine cluster](https://rancher.com/docs/rke/latest/en/).
+   
+  For help, see [Rancher Kubernetes Engine cluster](https://rancher.com/docs/rke/latest/en/).
 
 - **CLI users only**
 
@@ -43,7 +44,7 @@ Install {{prodname}} on Rancher's Next-generation Kubernetes Distribution (RKE2)
 
 - A `kubectl` environment with access to your cluster
 
-  - Ensure you have the [Kubeconfig file that was generated when you created the cluster](https://docs.rke2.io/cluster_access).
+  Ensure you have the [Kubeconfig file that was generated when you created the cluster](https://docs.rke2.io/cluster_access).
 
 - If using a Kubeconfig file locally, [install and set up the Kubectl CLI tool](https://kubernetes.io/docs/tasks/tools/install-kubectl/).
 
