--- a/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
@@ -83,7 +83,7 @@ IP**, if the egress gateway's pod IP came from an [IP
 pool](../../reference/resources/ippool.mdx) with `natOutgoing: true`, and the egress
 gateway's **pod IP** otherwise.
 
-### Controlling the use of egress gateways
+### Control the use of egress gateways
 
 If a cluster ascribes special meaning to traffic flowing through egress gateways, it will be
 important to control when cluster users can configure their pods and namespaces to use them, so that
@@ -181,6 +181,7 @@ patch release.
 - [Configure a Namespace or Pod to use egress gateways](#configure-a-namespace-or-pod-to-use-egress-gateways)
 - [Optionally enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
 - [Verify the feature operation](#verify-the-feature-operation)
+- [Control the use of egress gateways](#control-the-use-of-egress-gateways)
 - [Upgrade egress gateways](#upgrade-egress-gateways)
 
 ### Enable egress gateway support
