Fix EGW upgrade docs, icmp and http probe yaml (#320)
* Fix upgrade docs, icmp and http probe yaml

* Address review comments

* Fix verb

--- a/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
@@ -83,7 +83,7 @@ IP**, if the egress gateway's pod IP came from an [IP
 pool](../../reference/resources/ippool.mdx) with `natOutgoing: true`, and the egress
 gateway's **pod IP** otherwise.
 
-### Controlling the use of egress gateways
+### Control the use of egress gateways
 
 If a cluster ascribes special meaning to traffic flowing through egress gateways, it will be
 important to control when cluster users can configure their pods and namespaces to use them, so that
@@ -181,6 +181,8 @@ patch release.
 - [Configure a Namespace or Pod to use egress gateways](#configure-a-namespace-or-pod-to-use-egress-gateways)
 - [Optionally enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
 - [Verify the feature operation](#verify-the-feature-operation)
+- [Control the use of egress gateways](#control-the-use-of-egress-gateways)
+- [Upgrade egress gateways](#upgrade-egress-gateways)
 
 ### Enable egress gateway support
 
@@ -461,7 +463,7 @@ Connection from <source IP> <source port> received
 
 with `<source IP>` being one of the IPs of the egress IP pool that you provisioned.
 
-## Upgrading egress gateways
+## Upgrade egress gateways
 
 From v3.16, Egress Gateway deployments are managed by the Tigera Operator.
 
@@ -472,8 +474,9 @@ From v3.16, Egress Gateway deployments are managed by the Tigera Operator.
   routes in the cluster. If the egress gateway daemon cannot reach the API, it will fail and report errors to the logs
   as it retries the connection.
 
-- When upgrading, create an egress gateway as mentioned [above](#deploy-a-group-of-egress-gateways) which exactly matches
-  the current egress gateway deployment.
+- When upgrading from a pre-v3.16 release, no automatic upgrade will occur. To upgrade a pre-v3.16 Egress Gateway deployment,
+  create an equivalent EgressGateway resource with the same namespace and the same name as mentioned [above](#deploy-a-group-of-egress-gateways);
+  the operator will then take over management of the old Deployment resource, replacing it with the upgraded version.
 
 - Use `kubectl apply` to create the egress gateway resource. Tigera Operator will read the newly created resource and wait
   for the other {{prodname}} components to be upgraded. Once the other {{prodname}} components are upgraded, Tigera Operator
