--- a/calico-enterprise/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-aws.mdx
@@ -227,8 +227,9 @@ an instance (for example when scaling up the cluster).
 - [Configure a Namespace or Pod to use egress gateways](#configure-a-namespace-or-pod-to-use-egress-gateways)
 - [Optionally enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
 - [Verify the feature operation](#verify-the-feature-operation)
-- [Controlling the use of egress gateways](#controlling-the-use-of-egress-gateways)
+- [Control the use of egress gateways](#control-the-use-of-egress-gateways)
 - [Policy enforcement for flows via an egress gateway](#policy-enforcement-for-flows-via-an-egress-gateway)
+- [Upgrade egress gateways](#upgrade-egress-gateways)
 
 ### Configure IP autodetection
 
@@ -742,16 +743,21 @@ spec:
   ipPools:
   - name: "egress-red-west-1"
   - name: "egress-red-west-2"
-  egressGatewayFailureDetection:
-    healthTimeoutDataStoreSeconds: 30
-    icmpProbe:
-      ips: ["34.56.2.7"]
-      timeoutSeconds: 15
-      intervalSeconds: 5
-    httpProbe:
-      urls: ["http://example.com"]
-      timeoutSeconds: 30
-      intervalSeconds: 10
+# Uncomment this block to add ICMP, HTTP probes
+# egressGatewayFailureDetection:
+#   healthTimeoutDataStoreSeconds: 30
+#   icmpProbe:
+#     ips:
+#     - <IP to probe>
+#     - <IP to probe>
+#     timeoutSeconds: 15
+#     intervalSeconds: 5
+#   httpProbe:
+#     urls:
+#     - <URL to probe>
+#     - <URL to probe>
+#     timeoutSeconds: 30
+#     intervalSeconds: 10
   aws:
     nativeIP: Enabled
   template:
@@ -819,8 +825,8 @@ spec:
   ```yaml
   icmpProbe:
     ips:
-    - probeIP
-    - probeIP
+    - <IP to probe>
+    - <IP to probe>
     timeoutSeconds: 20
     intervalSeconds: 10
   ```
@@ -833,8 +839,8 @@ spec:
   ```yaml
   httpProbe:
     urls:
-    - probeURL
-    - probeURL
+    - <URL to probe>
+    - <URL to probe>
     timeoutSeconds: 30
     intervalSeconds: 10
   ```
@@ -995,7 +1001,7 @@ Connection from <source IP> <source port> received
 
 with `<source IP>` being one of the IPs of the egress IP pool that you provisioned.
 
-### Controlling the use of egress gateways
+### Control the use of egress gateways
 
 If a cluster ascribes special meaning to traffic flowing through egress gateways, it will be
 important to control when cluster users can configure their pods and namespaces to use them, so that
@@ -1073,7 +1079,7 @@ patch release.
 
 :::
 
-## Upgrading egress gateways
+## Upgrade egress gateways
 
 
 From v3.16, Egress Gateway deployments are managed by the Tigera Operator.
