CC-fix-link-help-center

--- a/calico-cloud/get-help/support.mdx
+++ b/calico-cloud/get-help/support.mdx
@@ -8,9 +8,7 @@ description: Ways to get help and provide feedback.
 
 Before opening a Support ticket, review this checklist of basic [troubleshooting](../get-started/connect/checklist.mdx).
 
-If you still need help, click the chat icon in Manager UI at the bottom of the left nav:
-
-![contact-support](/img/calico-cloud/contact-support.png)
+If you still need help, open a [support ticket](https://tigera.force.com/help/s/).
 
 ## Provide feedback
 
@@ -22,4 +20,4 @@ For details, see our [Support policy](https://www.tigera.io/legal/calico-cloud-s
 
 ## Check the status of Calico Cloud services
 
-You can go to [Calico Cloud Status](https://status.calicocloud.io) to view the current status of our sites and services.
+Go to [Calico Cloud Status](https://status.calicocloud.io) to view the current status of our sites and services.
