Misc. fixes to CC RN, sidebars, custom RBAC

--- a/calico-cloud_versioned_docs/version-3.15/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/release-notes/index.mdx
@@ -14,14 +14,20 @@ Calico Cloud includes new and improved Dashboards that enable operators to defin
 
 Calico Cloud includes a new UI that can be used to manage and configure global threat feeds
 
+For more information, see [Manager UI tutorial](../tutorials/calico-cloud-features/tour.mdx#dashboard).
+
 ### Namespace-based policy recommendations
 
 Calico Cloud has improved its policy recommendation engine to add namespace-based recommendations.
 This enables operators to easily implement microsegmentation for namespaces.
 
+For more information, see [Create policy recommendation](../network-policy/generate-policy-recommendation.mdx).
+
 ### Create custom roles for Calico Cloud users
 
 Calico Cloud adminstrators can now define granular roles and permissions for users using custom role-based access controls.
+
+For more information, see [Create and assign custom roles](../users/create-and-assign-custom-roles.mdx).
 
 ### Egress gateway improvements
 
@@ -33,7 +39,8 @@ Calico Cloud has also rearchitected egress gateway pods to improve security and 
 * CLI Version v1.3.4
 * Calico Cloud supports the Image Assurance CLI scanner versions 1.3.0 and later.
 * **Bug fix:** Previously, the scanner returned an error if it reached a size limit while uploading vulnerabilities.
-  This size limit has been removed.
+This size limit has been removed.
+
 
 ## December 13, 2022
 
