--- a/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
@@ -57,7 +57,7 @@ Install {{prodname}} using the CLI or Rancher UI.
 
 ### Install {{prodname}}
 
-1. [Configure a storage class for {{prodname}}.](../../operations/logstorage/create-storage.mdx).
+1. [Configure a storage class for {{prodname}}](../../operations/logstorage/create-storage.mdx).
 
 1. For RKE2 [CIS hardened clusters](https://docs.rke2.io/security/hardening_guide) with v1.24 or earlier, if the Tigera operator PSP is not installed, add it now.
 
