--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/quickstart.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/quickstart.mdx
@@ -104,7 +104,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{tmpScriptsURL}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {{githubURL}}node/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
