--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/quickstart.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/quickstart.mdx
@@ -118,7 +118,7 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{tmpScriptsURL}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {githubURL}/node/windows-packaging/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore using the default parameters or [customize installation parameters](#configure-installation-parameters).
@@ -207,7 +207,7 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{tmpScriptsURL}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {githubURL}/node/windows-packaging/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore using the default parameters or [customize installation parameters](#configure-installation-parameters).
@@ -280,7 +280,7 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{url}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {githubURL}/node/windows-packaging/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
