--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/windows-calico/quickstart.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/windows-calico/quickstart.mdx
@@ -291,7 +291,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{url}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {githubURL}/node/windows-packaging/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
