--- a/calico-cloud_versioned_docs/version-3.15/visibility/alerts.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/visibility/alerts.mdx
@@ -26,7 +26,13 @@ for common tasks that you can rename and edit to suit your own needs.
 
 **Recommended**
 
-We recommend turning down the aggregation level for flow logs to ensure that you see pod-specific results. {{prodname}} aggregates flow logs over the external IPs for allowed traffic, and alert events will not provide pod-specific results (unless the traffic is denied by policy).
+We recommend turning down the aggregation level for flow logs to ensure that you see pod-specific results. {{prodname}} aggregates flow logs over the external IPs for allowed traffic, and alert events will not provide pod-specific results (unless the traffic is denied by policy). 
+
+:::caution
+
+Turning down aggregation levels for flow logs increases the amount of log data generated and may increase your {{prodname}} bill.
+
+:::
 
 To turn down agregation on flow logs, go to [FelixConfiguration](../reference/resources/felixconfig.mdx) and set the field, **flowLogsFileAggregationKindForAllowed** to **1**.
 
