--- a/calico-cloud/threat/tor-vpn-feed-and-dashboard.mdx
+++ b/calico-cloud/threat/tor-vpn-feed-and-dashboard.mdx
@@ -29,7 +29,7 @@ Over the years, many Tor flaws became public and attackers evolved to leverage T
 ### Tor-VPN feed types
 
 **Tor Bulk Exit feed**
-The Tor Bulk Exit feed lists available Tor exit nodes on the internet which are used by Tor network. The list continuously updated and maintained by the Tor project. An attacker using Tor network, is likely to use one of the bulk exit nodes to connect to your infrastructure. The network security teams can detect such activity with Tor bulk exit feed and investigate as required.
+The Tor Bulk Exit feed lists available Tor exit nodes on the internet which are used by Tor network. The list is continuously updated and maintained by the Tor project. An attacker using Tor network, is likely to use one of the bulk exit nodes to connect to your infrastructure. The network security teams can detect such activity with Tor bulk exit feed and investigate as required.
 
 **X4B VPN feed**
 In recent times it became a trend to use multiple anonymization networks to hide real attacker identity.list of common VPN providers. There are lots of lists of open proxies and tor nodes on the web, but surprisingly few usable ones dedicated to VPN providers and datacenters. This list combines known VPN netblocks and ASNs owned by datacenters and VPN providers. This list doesn't list all VPNs, but should list the vast majority of common ones.
