--- a/calico-cloud/threat/suspicious-ips.mdx
+++ b/calico-cloud/threat/suspicious-ips.mdx
@@ -57,6 +57,23 @@ This section describes how to pull or push threat feeds to {{prodname}}, and blo
 
 To add threat feeds to {{prodname}} for automatic updates (default is once a day), the threat feed(s) must be available using HTTP(S), and return a newline-separated list of IP addresses or prefixes in CIDR notation.
 
+#### Using Manager UI
+
+1. From the Manager UI, select **Threat Feeds** --> **Add Feed**.
+2. Add your threat feed on the Add a New Threat Feed window. For example:
+   - **Feed Name**: feodo-tracker
+   - **Description**: This is the feodo-tracker threat feed.
+   - **URL**: <https://feodotracker.abuse.ch/downloads/ipblocklist.txt>
+   - **Content type**: IPSet
+   - **Labels**: Choose a label from the list.
+3. Click **Save Changes**.
+   <br />
+   From the **Action** menu, you can view or edit the details that you entered and can download the manifest file.
+
+> Go to the Alerts page to view events that are generated when an IP is displayed on the threat feed list. For more information, see [Manage alerts](../visibility/alerts.mdx). When you create a global threat feed in Manager UI, network traffic is not automatically blocked. If you find suspicious IPs on the Alerts page, you need to create a network policy to block the traffic. For help with policy, see [Block traffic to a cluster](#block-traffic-to-a-cluster).
+
+#### Using CLIs
+
 1. Create the GlobalThreatFeed YAML and save it to file.
    The simplest example of this looks like the following. Replace the **name** and the **URL** with your feed.
 
@@ -81,7 +98,8 @@ To add threat feeds to {{prodname}} for automatic updates (default is once a day
    kubectl apply -f <your_threatfeed_filename>
    ```
 
-3. In {{prodname}} Manager, go to the “Alerts” page to view events that are generated when an IP is displayed on the threat feed list.
+> Go to the Alerts page to view events that are generated when an IP is displayed on the threat feed list. For more information, see [Manage alerts](../visibility/alerts.mdx).
+
 
 ### Push threat feed updates
 
