Fixes link in CC release notes

--- a/calico-cloud/release-notes/index.mdx
+++ b/calico-cloud/release-notes/index.mdx
@@ -14,7 +14,7 @@ Calico Cloud includes new and improved Dashboards that enable operators to defin
 
 Calico Cloud includes a new UI that can be used to manage and configure global threat feeds
 
-For more information, see [Manager UI tutorial](../tutorials/calico-cloud-features/tour.mdx#dashboard).
+For more information, see [Detect and alert on anomalies](../threat/security-anomalies.mdx) and [Trace and block suspicious IPs](../threat/suspicious-ips.mdx).
 
 ### Namespace-based policy recommendations
 
