--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
@@ -1,6 +1,6 @@
 10 January 2023
 
-### What's new
+### What's new {#whats-new-3.16.0}
 
 #### Egress gateways for AKS and Azure
 
@@ -45,3 +45,11 @@ For more information, see [Workload-based web application firewall](../../threat
 This also enables administrators to configure which service IPs are advertised for a network by the service IP advertisement feature.
 
 For more information, see [Configure egress traffic to multiple external networks](../../networking/egress/external-network.mdx).
+
+#### Improved product security with more restrictive `SecurityContext`
+
+{{prodname}} has updated its components to apply a more restrictive `SecurityContext` where applicable.
+This includes the following:
+* Non-root context whenever possible and added drop ALL `Capabilities`
+* Root context and privilege escalation are used only when necessary
+* `SeccompProfile` is set to `RuntimeDefault`
