Adds known issues to 3.16.0 RN

--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
@@ -53,3 +53,8 @@ This includes the following:
 * Non-root context whenever possible and added drop ALL `Capabilities`
 * Root context and privilege escalation are used only when necessary
 * `SeccompProfile` is set to `RuntimeDefault`
+
+## Known issues
+
+* L7 log collection fails to deploy on CIS hardened clusters. As a result, some cards in the manager UI dashboard will not display any metrics.
+* Upgrading to {{prodname}} 3.16.0 on Rancher/RKE from {{prodname}} 3.13.0 currently requires manually terminating the calico-node container for upgrade to proceed.
