--- a/calico-enterprise_versioned_docs/version-3.15/operations/clis/calicoq/installing.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/operations/clis/calicoq/installing.mdx
@@ -32,7 +32,9 @@ corresponds to your desired deployment.
 
 1. Use the following command to download the `calicoq` binary.
 
-   <MaintenanceClisCalicoqInstalling />
+   ```batch
+    curl -o calicoq -O -L {{downloadsurl}}/ee/binaries/{{releaseTitle}}/calicoq
+   ```
 
 1. Set the file to be executable.
 
