--- a/calico-cloud_versioned_docs/version-3.15/tutorials/calico-cloud-features/tour.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/tutorials/calico-cloud-features/tour.mdx
@@ -18,10 +18,10 @@ Let's go through each item in the Manager UI left navbar from top to bottom. You
 The Dashboard provides a birds-eye view of cluster activity. Note the following:
 
 - The filter panel at the top lets you change dashboard views and the time range.
-- The **Layout Settings** shows the default metrics. To get WireGuard metrics for pod-to-pod and host-to-host encryption, you must [enable WireGuard](../../compliance/encrypt-cluster-pod-traffic.mdx).
+- The **Customize Layout** shows the default metrics. To get WireGuard metrics for pod-to-pod and host-to-host encryption, you must [enable WireGuard](../../compliance/encrypt-cluster-pod-traffic.mdx).
 - For application-related dashboard cards to show data, like HTTP Response Codes or Url Requests, you need to [configure L7 logs](../../visibility/elastic/l7/configure.mdx).
 
-![dashboards](/img/calico-cloud/dashboards.png)
+![dashboards](/img/calico-enterprise/dashboards.png)
 
 ## Service Graph
 
